Add CMD-Agent Experimental Version to assist in generating and executing CB-Spider commands

--- a/api-runtime/rest-runtime/admin-web/html/main.html
+++ b/api-runtime/rest-runtime/admin-web/html/main.html
@@ -52,15 +52,15 @@
             display: none;
             position: absolute;
             background-color: #000; /* Background color */
-            color: #fff; /* Font color */
-            font-size: 14px; /* Font size increased */
-            min-width: 100px; /* Increased the width */
+            color: #fff;           /* Font color */
+            font-size: 14px;       /* Font size increased */
+            min-width: 100px;      /* Increased the width */
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1000; /* Ensure dropdown appears above everything else */
-            top: 100%; /* Show dropdown below the button */
-            left: -1cm; /* Move the dropdown 1cm to the left */
-            padding: 10px; /* Padding for content */
-            border-radius: 8px; /* Rounded corners */
+            z-index: 1000;         /* Ensure dropdown appears above everything else */
+            top: 100%;             /* Show dropdown below the button */
+            left: -1cm;            /* Move the dropdown 1cm to the left */
+            padding: 10px;         /* Padding for content */
+            border-radius: 8px;    /* Rounded corners */
         }
         .dropdown-content a {
             color: #fff; /* Font color */
@@ -80,7 +80,7 @@
         .top-menu-right {
             margin-left: auto;
             display: flex;
-            gap: 20px; /* Increased gap */
+            gap: 20px;          /* Increased gap */
             padding-right: 0.5cm; /* Move the menu items 0.5cm to the left */
             align-items: center;
         }
@@ -90,9 +90,9 @@
             align-items: center;
         }
         .connection-info img {
-            height: 30px; /* Image height */
+            height: 30px;        /* Image height */
             position: relative;
-            margin-left: 0.5cm; /* Move the image 1cm to the right */
+            margin-left: 0.5cm;  /* Move the image 1cm to the right */
         }
         .connection-info .conn-name {
             font-size: 16px;
@@ -176,7 +176,108 @@
             display: none;
             z-index: 1000;
         }
+        
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0; 
+            left: 0; 
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .overlay-content {
+            background: white;
+            padding: 20px;
+            border-radius: 5px;
+            width: 80%;
+            height: 80vh;
+            text-align: center;
+            display: flex; 
+            flex-direction: column; 
+        }
+
+        .overlay-content iframe {
+            flex: 1;
+            min-height: 500px;
+        }
+
+        .overlay-content button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #08aab0;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .ai-menu-item {
+            position: relative;
+            text-decoration: none;
+            color: inherit;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            padding: 5px 10px;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+        }
+
+        .ai-menu-item:hover {
+            background: rgba(8, 170, 176, 0.1);
+            transform: scale(1.05);
+        }
+
+        .ai-menu-item::after {
+            content: "Experimental Version - Under Development";
+            position: absolute;
+            bottom: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 4px;
+            font-size: 12px;
+            white-space: nowrap;
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .ai-menu-item:hover::after {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        .beta-tag {
+            font-size: 10px;
+            color: #08aab0;
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background: rgba(8, 170, 176, 0.1);
+            padding: 2px 4px;
+            border-radius: 3px;
+        }
+
+        .ai-icon {
+            font-size: 16px;
+        }
+
+        .ai-text {
+            font-weight: 500;
+            background: linear-gradient(45deg, #08aab0, #0645AD);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
     </style>
+    
     <script>
         function updateTopMenu(configName, provider, region) {
             const selectedConfigNameElement = document.getElementById('selectedConfigName');
@@ -288,6 +389,15 @@
                 hideProgressBar();
             }
         });
+
+        function showCmdAgent() {
+            const iframe = document.querySelector('#cmdAgentOverlay iframe');
+            iframe.src = iframe.src;
+            document.getElementById('cmdAgentOverlay').style.display = 'flex';
+        }
+        function closeCmdAgent() {
+            document.getElementById('cmdAgentOverlay').style.display = 'none';
+        }
     </script>
 </head>
 <body>
@@ -298,13 +408,20 @@
         <div class="right-content">
             <div class="top-menu">
                 <div class="connection-info">
-                    <div id="selectedConfigName" class=""><h1 class="selectedConfigName">Please select a connection first.</h1></div>
+                    <div id="selectedConfigName" class="">
+                        <h1 class="selectedConfigName">Please select a connection first.</h1>
+                    </div>
                     <div id="selectedProvider"></div>
                     <div id="selectedRegion"></div>
                 </div>
                 <div class="top-menu-right">
                     <div class="dynamic-menu"></div>
                     <div class="separator"></div>
+                    <a href="#" onclick="showCmdAgent()" class="ai-menu-item" title="Experimental Version">
+                        <span class="ai-icon">🤖</span>
+                        <span class="ai-text">CMD-Agent</span>
+                        <span class="beta-tag">beta</span>
+                    </a>
                     <div class="dropdown">
                         <span>help</span>
                         <div class="dropdown-content">
@@ -322,12 +439,22 @@
                 </div>
             </div>
             <div class="body-frame">
-                <iframe src="/spider/adminweb/body_frame" name="body_frame" onload="parent.postMessage({ type: 'iframeLoaded' }, '*')"></iframe>
+                <iframe src="/spider/adminweb/body_frame" name="body_frame"
+                        onload="parent.postMessage({ type: 'iframeLoaded' }, '*')">
+                </iframe>
                 <div class="progress-bar">
                     <div class="progress-bar-inner"></div>
                 </div>
                 <div class="error-message"></div>
             </div>
+        </div>
+    </div>
+
+    <div id="cmdAgentOverlay" class="overlay">
+        <div class="overlay-content">            
+            <iframe src="/spider/adminweb/cmd-agent" frameborder="0" width="100%" height="100%"></iframe>
+            <br><br>
+            <button onclick="closeCmdAgent()">close</button>
         </div>
     </div>
 </body>
