--- a/api-runtime/rest-runtime/admin-web/html/main.html
+++ b/api-runtime/rest-runtime/admin-web/html/main.html
@@ -255,7 +255,7 @@
         }
 
         .beta-tag {
-            font-size: 10px;
+            font-size: 12px;
             color: #08aab0;
             position: absolute;
             top: -5px;
@@ -266,12 +266,12 @@
         }
 
         .ai-icon {
-            font-size: 16px;
+            font-size: 20px;
         }
 
         .ai-text {
             font-weight: 500;
-            background: linear-gradient(45deg, #08aab0, #0645AD);
+            background: linear-gradient(45deg, hsl(52, 91%, 36%), #1b1911e5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
